--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-terraform\.terraform
-terraform\terraform.tfstate.d
-terraform\*.hcl
-!terraform\*.tf
+terraform/.terraform
+terraform/terraform.tfstate.d
+terraform/*.hcl
